# kitchenflow-v2

./: Dockerfile  KitchenFlow_v2_Training.ipynb  README.md  __init__.py  app.py  client.py  deploy-pages.yml  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  train.py
server/: app.py
